--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: "Stem";
+    src: url("./assets/fonts/Stem-Medium.ttf");
+    font-weight: 500;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: "Stem";
+    src: url("./assets/fonts/Stem-Bold.ttf");
+    font-weight: 700;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --btn-color: #FFA400;
+    --light-grey: rgba(0, 0, 0, 0.7);
+}
+
+body {
+    font-family: Stem;
+    font-weight: 500;
+    width: 1400px;
+    margin: 0 auto;
+}
+
+.wrapper {
+    width: 1110px;
+    margin: 0 auto;
 }
